Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6
-
Can result in data loss
-
-
Q4/2025 Server Development
Description
[00] FATAL ERROR: 2025-11-07 02:53:44 Unexpected DDL operation detected in the late phase of backup while executing delete on ./test/FTS_0000000000000038_DELETED.ibd. Backup is inconsistent.
This issue was found while testing MDEV-37755
RR trace is present on pluto :-
/data/results/1762460698/MDEV-38041