extra/mariabackup/backup_copy.cc
@@ -1462,6 +1462,7 @@ bool backup_start(ds_ctxt *ds_data, ds_ctxt *ds_meta,
 
 	corrupted_pages.backup_fix_ddl(ds_data, ds_meta);
 
+	DBUG_MARIABACKUP_EVENT("after_backup_fix_ddl", {});
 	// There is no need to stop slave thread before coping non-Innodb data when
 	// --no-lock option is used because --no-lock option requires that no DDL or
 	// DML to non-transaction tables can occur.
